# M-YGO-Agent

./: .gitignore  Makefile  README.md  pyproject.toml  xmake.lua
assets/deck/: DragonMaidTail.ydk  TenpaiDragonMaid.ydk
scripts/: battle.py  code_list.txt  eval.py  test.py
scripts/card/: code_list.py  embedding.py
scripts/torch/: ppo.py  ppo_c.py  ppo_osfp.py  ppo_xla.py
src/ygoai/: utils.py
src/ygoenv/: registration.py
src/ygoenv/core/: env_spec.h
src/ygoenv/edopro/: edopro.h
src/ygoenv/python/: data.py  env_spec.py  gym_envpool.py  protocol.py
src/ygoenv/ygopro/: ygopro.h
src/ygoenv/ygopro0/: ygopro.h
